fix styles and overflows

--- a/src/static/style/App.css
+++ b/src/static/style/App.css
@@ -75,7 +75,7 @@ a:hover {
 }
 
 .font15 {
-  font-size: 1.5rem !important;
+  font-size: 1.3rem !important;
 }
 
 .display-none {
@@ -86,7 +86,7 @@ a:hover {
 
 .hero-bg {
   width: 100%;
-  height: 100vh;
+  height: 93vh;
   background: url(../images/banner/banner.png) center center/cover no-repeat;
 }
 
@@ -101,7 +101,7 @@ a:hover {
 }
 
 .hero_text h3 {
-  margin: 1.2rem 0;
+  margin: 1rem 0;
 }
 
 .btn {
